[gd_scene load_steps=53 format=3 uid="uid://b142sd861jpb0"]

[ext_resource type="Script" path="res://script/player/player.gd" id="1_4t0x4"]
[ext_resource type="Shader" path="res://shaders/outline_2.gdshader" id="2_hkm1e"]
[ext_resource type="Script" path="res://script/player/player_weapon_manager.gd" id="3_8crra"]
[ext_resource type="Material" uid="uid://buqddq0srhe84" path="res://materials/smoke.material" id="3_tajs7"]
[ext_resource type="Script" path="res://script/player/player_target.gd" id="3_tqfwt"]
[ext_resource type="Texture2D" uid="uid://t7fjrcgkdcwk" path="res://textures/gui/lock_on.png" id="4_wh5n0"]
[ext_resource type="FontFile" uid="uid://di23wbbbnrqmu" path="res://fonts/ChemyRetro_v01.ttf" id="6_dx3k2"]
[ext_resource type="Script" path="res://script/effects/ground_check.gd" id="7_p8ui4"]
[ext_resource type="Texture2D" uid="uid://cu63f3b8sb1n3" path="res://textures/effects/water_splash.png" id="8_b27oc"]
[ext_resource type="Texture2D" uid="uid://d0hhb6a0det0b" path="res://textures/effects/water_ring.png" id="9_t3q4k"]
[ext_resource type="Script" path="res://script/player/player_gui.gd" id="10_5pu4h"]
[ext_resource type="Shader" path="res://shaders/distort_2.gdshader" id="11_fu2vn"]
[ext_resource type="Shader" path="res://shaders/lens_flare.gdshader" id="12_5rfpw"]
[ext_resource type="Shader" path="res://addons/post_processing/shaders/speed_lines.gdshader" id="13_6evge"]
[ext_resource type="Texture2D" uid="uid://hlotp7e25854" path="res://textures/gui/crosshair_center.png" id="15_eaxbm"]
[ext_resource type="Texture2D" uid="uid://ct33v08ovt8jh" path="res://textures/gui/crosshair_circle.png" id="16_ue7ew"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_75dfv"]

[sub_resource type="CylinderMesh" id="CylinderMesh_l4car"]
top_radius = 0.0
bottom_radius = 60.0
height = 240.0
radial_segments = 8

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8ba34"]
points = PackedVector3Array(-60, -120, -3.8147e-06, -42.4276, -120, -42.4276, -42.4276, -120, 42.4158, -48.007, -72.0047, -3.8147e-06, -25.4659, -24.0094, -25.4659, -3.8147e-06, -72.0047, -48.007, -3.8147e-06, -120, -60, -3.8147e-06, -120, 60, -25.4659, -24.0094, 25.4542, -24.0094, 23.9859, -3.8147e-06, -8.49256, 71.9812, -8.49256, -3.8147e-06, 23.9859, -24.0094, 42.4158, -120, -42.4276, 25.4542, -24.0094, -25.4659, 42.4158, -120, 42.4158, 25.4542, -24.0094, 25.4542, -3.8147e-06, 120, -3.8147e-06, 60, -120, -3.8147e-06)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hmu8i"]
render_priority = 0
shader = ExtResource("2_hkm1e")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/distance_falloff = 0.1
shader_parameter/smoothing_cutoff = 0.0
shader_parameter/smoothing_max = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_ce76p"]
material = SubResource("ShaderMaterial_hmu8i")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_my7a2"]
offsets = PackedFloat32Array(0, 0.0888889, 0.738889, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.145098, 1, 1, 1, 0.545098, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2mca"]
gradient = SubResource("Gradient_my7a2")

[sub_resource type="Curve" id="Curve_d406j"]
_data = [Vector2(0, 0.141176), 0.0, 2.18207, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qx1ce"]
curve = SubResource("Curve_d406j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqoy2"]
emission_shape = 1
emission_sphere_radius = 0.3
angle_min = 1.07288e-05
angle_max = 360.0
gravity = Vector3(0, 0.05, 0)
scale_min = 1.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_qx1ce")
color = Color(1, 1, 1, 0.607843)
color_ramp = SubResource("GradientTexture1D_a2mca")

[sub_resource type="QuadMesh" id="QuadMesh_147q2"]
material = ExtResource("3_tajs7")

[sub_resource type="Gradient" id="Gradient_uqbwg"]
offsets = PackedFloat32Array(0, 0.122222, 0.633333, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.792105, 0.792105, 0.792105, 0.848684, 0.933333, 0.933333, 0.933333, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3g1q3"]
gradient = SubResource("Gradient_uqbwg")

[sub_resource type="Curve" id="Curve_e8qsg"]
_data = [Vector2(0, 0), 0.0, 2.82699, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8aow4"]
curve = SubResource("Curve_e8qsg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qvtb2"]
emission_shape_scale = Vector3(1.8, 0.1, 1.8)
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, 1, 0)
spread = 50.0
flatness = 0.5
initial_velocity_min = 2.0
initial_velocity_max = 4.0
angular_velocity_min = -100.0
angular_velocity_max = 9.99998
orbit_velocity_min = -0.0999999
orbit_velocity_max = 0.1
gravity = Vector3(0, -4, 0)
damping_min = 1.0
damping_max = 1.0
attractor_interaction_enabled = false
scale_min = 1.6
scale_max = 2.5
scale_curve = SubResource("CurveTexture_8aow4")
color = Color(1, 1, 1, 0.407843)
color_ramp = SubResource("GradientTexture1D_3g1q3")
turbulence_influence_min = 0.01
turbulence_influence_max = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ri7fi"]
render_priority = 1
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("8_b27oc")
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_hv7cg"]
material = SubResource("StandardMaterial3D_ri7fi")

[sub_resource type="Gradient" id="Gradient_r4k8d"]
offsets = PackedFloat32Array(0, 0.194444, 0.355556, 0.544444, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.341176, 1, 1, 1, 0.861097, 1, 1, 1, 0.262745, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_353pl"]
gradient = SubResource("Gradient_r4k8d")

[sub_resource type="Curve" id="Curve_aenht"]
_data = [Vector2(0, 0), 0.0, -0.0338679, 0, 0, Vector2(0.384211, 0.564706), 1.38742, 1.38742, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_c34g5"]
curve = SubResource("Curve_aenht")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0s0xq"]
particle_flag_rotate_y = true
angle_min = 1.07288e-05
angle_max = 360.0
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 32.0
scale_max = 32.0
scale_curve = SubResource("CurveTexture_c34g5")
color = Color(1, 1, 1, 0.32549)
color_ramp = SubResource("GradientTexture1D_353pl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b8xip"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.435294)
albedo_texture = ExtResource("9_t3q4k")
disable_receive_shadows = true

[sub_resource type="QuadMesh" id="QuadMesh_irqfv"]
material = SubResource("StandardMaterial3D_b8xip")
orientation = 1

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kjj4u"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1j4e7"]
noise = SubResource("FastNoiseLite_kjj4u")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i2dia"]
shader = ExtResource("11_fu2vn")
shader_parameter/refraction_stretch = Vector2(1, 1)
shader_parameter/refraction_strength = 0.02
shader_parameter/water_tint = Color(0.2, 0.6, 1, 0.447059)
shader_parameter/speed = 0.1
shader_parameter/refraction_map = SubResource("NoiseTexture2D_1j4e7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yt3w6"]
shader = ExtResource("12_5rfpw")
shader_parameter/Blur = 2.5
shader_parameter/FlareThreshold = 1.5
shader_parameter/Thresholdsmoothness = 0.2
shader_parameter/Flares = 3
shader_parameter/FlareSpacing = null
shader_parameter/FlareDistance = 0.5
shader_parameter/LensThickness = 1.0
shader_parameter/Intensity = 0.3
shader_parameter/Saturation_ = 5.0
shader_parameter/visibility = 1.0
shader_parameter/MinFlareIntensity = 0.0
shader_parameter/MaxFlareIntensity = 1.0
shader_parameter/RainbowIntensity = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6bdcc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d1pqv"]
noise = SubResource("FastNoiseLite_6bdcc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cgla"]
shader = ExtResource("13_6evge")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_count = 2.0
shader_parameter/line_density = 0.08
shader_parameter/line_faloff = 1.0
shader_parameter/mask_size = 0.333
shader_parameter/mask_edge = 0.372
shader_parameter/animation_speed = 20.0
shader_parameter/noise = SubResource("NoiseTexture2D_d1pqv")

[sub_resource type="Animation" id="Animation_puae3"]
resource_name = "on"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.854902)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_txfbh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7wxom"]
resource_name = "off"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.854902), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rsmn7"]
_data = {
"RESET": SubResource("Animation_txfbh"),
"off": SubResource("Animation_7wxom"),
"on": SubResource("Animation_puae3")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 5
collision_mask = 5
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
motion_mode = 1
wall_min_slide_angle = 0.0349066
script = ExtResource("1_4t0x4")

[node name="col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CapsuleShape3D_75dfv")

[node name="yaw" type="Node3D" parent="."]

[node name="pitch" type="Node3D" parent="yaw"]

[node name="target" type="Node3D" parent="yaw/pitch" groups=["player_target"]]
script = ExtResource("3_tqfwt")

[node name="lock_on" type="Sprite3D" parent="yaw/pitch/target"]
visible = false
sorting_offset = 1.0
custom_aabb = AABB(-0.2, -0.2, -0.2, 0.4, 0.4, 0.4)
ignore_occlusion_culling = true
gi_mode = 0
pixel_size = 0.003
billboard = 1
no_depth_test = true
fixed_size = true
texture = ExtResource("4_wh5n0")

[node name="area" type="Area3D" parent="yaw/pitch/target"]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="col_shape" type="MeshInstance3D" parent="yaw/pitch/target/area"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -120)
visible = false
mesh = SubResource("CylinderMesh_l4car")

[node name="col" type="CollisionShape3D" parent="yaw/pitch/target/area"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -120)
shape = SubResource("ConvexPolygonShape3D_8ba34")

[node name="camera" type="Camera3D" parent="yaw/pitch"]
current = true
fov = 80.0
near = 0.005

[node name="outline" type="MeshInstance3D" parent="yaw/pitch/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.01)
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_ce76p")

[node name="weapon_manager" type="Node3D" parent="yaw/pitch"]
script = ExtResource("3_8crra")

[node name="smoke_trail" type="GPUParticles3D" parent="yaw"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0.5)
emitting = false
amount = 120
lifetime = 4.0
fixed_fps = 20
interpolate = false
fract_delta = false
trail_lifetime = 6.0
process_material = SubResource("ParticleProcessMaterial_tqoy2")
draw_pass_1 = SubResource("QuadMesh_147q2")

[node name="ground_check" type="Node3D" parent="."]
script = ExtResource("7_p8ui4")

[node name="raycast" type="RayCast3D" parent="ground_check"]
target_position = Vector3(0, -300, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="splash" type="GPUParticles3D" parent="ground_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
cast_shadow = 0
gi_mode = 0
emitting = false
amount = 64
lifetime = 0.2
explosiveness = 0.2
process_material = SubResource("ParticleProcessMaterial_qvtb2")
draw_pass_1 = SubResource("QuadMesh_hv7cg")

[node name="rings" type="GPUParticles3D" parent="ground_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
cast_shadow = 0
emitting = false
amount = 12
lifetime = 1.6
explosiveness = 0.05
process_material = SubResource("ParticleProcessMaterial_0s0xq")
draw_pass_1 = SubResource("QuadMesh_irqfv")

[node name="gui" type="CanvasLayer" parent="."]
script = ExtResource("10_5pu4h")

[node name="fps" type="Label" parent="gui"]
offset_left = 16.0
offset_top = 16.0
offset_right = 76.0
offset_bottom = 39.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 24
text = "FPS: 0"

[node name="overheat" type="Label" parent="gui"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -86.0
offset_right = 197.0
offset_bottom = -61.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 24
text = "Overheat: 0%"

[node name="velocity" type="Label" parent="gui"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -118.0
offset_right = 189.0
offset_bottom = -93.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 24
text = "0 km/h"

[node name="health" type="Label" parent="gui"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 191.0
offset_bottom = -15.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 32
text = "+100"

[node name="ammo_magazine" type="Label" parent="gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -78.0
offset_right = -35.0
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 32
text = "0/0"
horizontal_alignment = 2

[node name="ammo_inventory" type="Label" parent="gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -40.0
offset_right = -46.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_dx3k2")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="water_distortion" type="ColorRect" parent="gui"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_i2dia")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0675, 0.1485, 0.27, 0.54902)

[node name="water_horizon" type="ColorRect" parent="gui"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2592, 0.40272, 0.48, 1)

[node name="lens_flare" type="ColorRect" parent="gui"]
z_index = -1
material = SubResource("ShaderMaterial_yt3w6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="speed_lines" type="ColorRect" parent="gui"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_3cgla")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="crosshair" type="Node2D" parent="gui"]

[node name="center" type="Sprite2D" parent="gui/crosshair"]
modulate = Color(1, 1, 1, 0.854902)
texture = ExtResource("15_eaxbm")

[node name="circle" type="Sprite2D" parent="gui/crosshair"]
modulate = Color(1, 1, 1, 0.854902)
texture = ExtResource("16_ue7ew")

[node name="target" type="Node2D" parent="gui"]

[node name="sprite" type="Sprite2D" parent="gui/target"]
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("4_wh5n0")

[node name="animation_player" type="AnimationPlayer" parent="gui/target"]
libraries = {
"": SubResource("AnimationLibrary_rsmn7")
}
